[metadata]
name = pypret
version = file: pypret/VERSION
description = Python for Pulse Retrieval
long_description = file: readme.md
license = MIT
licence_file = LICENSE
url = https://github.com/ncgeib/pypret
author = Nils C. Geib
author_email = nils.geib@uni-jena.de
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 5 - Production/Stable
    Environment :: Other Environment
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Human Machine Interfaces
    Topic :: Scientific/Engineering :: Visualization
	License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: User Interfaces

[options]
py_module = pypret
python_requires = >=3.6, <3.9
install_requires=
    h5py
	loky
	scipy

package_dir =
    =.
packages = find:
include_package_data = True

[options.packages.find]
where = .


